🚫incomplete project section and some error in different section also needs to get resolved

--- a/landingpage/src/Components/services/services.scss
+++ b/landingpage/src/Components/services/services.scss
@@ -39,7 +39,7 @@
     text-align: center;
     margin: 20px;
     background-color: $white;
-    border-radius: 10px;
+    border-radius: 1px solid $light-grey-border-color;
 
     h4 {
       font-size: 20px;
