--- a/landingpage/src/variables.module.scss
+++ b/landingpage/src/variables.module.scss
@@ -7,7 +7,7 @@ $dark-gray-color: #484a46;
 $light-gray-color: #787976;
 $disabled-nav-content-color: #c1cace;
 $light-grey-border-color: #ebe8e8;
-$white: #ffffff;
+$white: #fff;
 $disabled-color: #e9ecef;
 $dark-white-color: #dfe5ec;
 $form-input-bg-color: #2a5d77;
