--- a/landingpage/src/Components/intro/intro.scss
+++ b/landingpage/src/Components/intro/intro.scss
@@ -26,37 +26,47 @@
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  box-sizing: border-box;
+  text-align: left;
 }
 
 .lp_skill-card {
   flex-basis: 30%;
-  text-align: center;
-  margin-bottom: 30px;
+  text-align: left;
+  vertical-align: top;
+  margin-bottom: 2.5rem;
   box-sizing: border-box;
   padding: 20px;
+  border: none;
   border-radius: 10px;
+  word-wrap: break-word;
+  display: inline-block;
+  max-width: 17.5rem;
+  position: relative;
 
   span {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 1.5rem 1rem;
-    width: 3rem;
-    height: 3rem;
+    width: 6rem;
+    height: 6rem;
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
     background-color: $light-green-color;
     color: $white;
     font-size: 2rem;
-    line-height: 1rem;
-    margin-bottom: 0px;
-    margin-left: 10px;
+    line-height: 6rem;
+    margin-bottom: 1rem;
     font: 900;
   }
 
   h4 {
-    font-size: 1.25rem;
-    font-weight: bold;
-    color: $dark-green-color;
+    font: 700 1.25rem/1.625rem "Montserrat", sans-serif;
+    color: $dark-gray-color;
     margin-bottom: 10px;
   }
 
@@ -69,12 +79,16 @@
 }
 
 .lp_container {
-  padding-top: 6.875rem;
+  padding-top: 3rem;
   display: flex;
+  flex-direction: column;
+  word-wrap: break-word;
   justify-content: center;
   align-items: center;
   margin-top: 50px;
   position: relative;
+  background-clip: border-box;
+  border-radius: 0.25rem;
 
   .girlswing-wrapper {
     overflow: hidden;
@@ -94,6 +108,8 @@
     background-size: cover;
     transition: transform 0.3s ease-out; /* Smooth transition */
     cursor: pointer;
+    border: none;
+    margin-top: -3rem;
   }
 
   .Girlswing:hover {
