--- a/landingpage/src/Components/project/project.scss
+++ b/landingpage/src/Components/project/project.scss
@@ -31,6 +31,22 @@
   text-transform: uppercase;
   text-align: center;
 
+  .h2 {
+    text-align: center;
+    margin-bottom: 3.25rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    box-sizing: border-box;
+    font: {
+      weight: 700;
+      size: 1.75rem;
+      line-height: 2.125rem;
+      family: "Montserrat", sans-serif;
+    }
+    color: var(--dark-gray-color);
+  }
+
   .h3 {
     text-align: center;
     margin-bottom: 3.25rem;
@@ -43,10 +59,9 @@
     color: var(--dark-gray-color);
   }
 }
-
 .category-list-container {
   display: flex;
-  justify-content: left;
+  justify-content: center;
   margin-bottom: 2rem;
 
   ul {
@@ -96,6 +111,26 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 1rem;
+  transition: transform 0.3s ease;
+
+  &:hover {
+    transform: scale(1.1);
+
+    .h3 {
+      opacity: 1;
+      transition: opacity 0.3s ease;
+    }
+  }
+
+  .h3 {
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+    align-content: center;
+    color: var(--white);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
 }
 
 .project-item-p-1 {
@@ -171,6 +206,17 @@
   padding-bottom: 3.375rem;
   background-color: var(--white);
   text-align: center;
+  display: flex;
+  flex: 0 0 100%;
+  max-width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  position: relative;
+  padding-left: 15px;
+  padding-right: 15px;
+  box-sizing: border-box;
+  text-align: center;
+  font: 400 1rem/1.5625rem "Open Sans", sans-serif;
 
   h3 {
     font: {
@@ -195,15 +241,20 @@
       line-height: 1.5625rem;
       family: "Open Sans", sans-serif;
     }
-    margin-bottom: 3.5rem;
+    margin-bottom: 4px;
     color: var(--dark-gray-color);
   }
 }
 
 .team-member-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: inline-block;
+  // flex-wrap: wrap;
+  // justify-content: space-around;
+  margin-bottom: 3.5rem;
+  box-sizing: border-box;
+  text-align: center;
+  padding-top: 6.375rem;
+  padding-bottom: 3.375rem;
 }
 
 .team-member {
@@ -244,7 +295,7 @@
 
 .social-links {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 100%;
 }
