--- a/landingpage/src/Components/project/project.scss
+++ b/landingpage/src/Components/project/project.scss
@@ -1,5 +1,9 @@
 @import "../../variables.module.scss";
 
+* {
+  align-items: center;
+}
+
 .lp__header {
   padding: 10rem 0;
   background-repeat: no-repeat;
@@ -33,10 +37,7 @@
 
   .h2 {
     text-align: center;
-    margin-bottom: 3.25rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
+    margin: 0 auto 3.25rem;
     box-sizing: border-box;
     font: {
       weight: 700;
