--- a/landingpage/src/Components/project/project.scss
+++ b/landingpage/src/Components/project/project.scss
@@ -22,7 +22,7 @@
     line-height: 1.125rem;
     family: "Montserrat", sans-serif;
   }
-  color: var(--light-green-color);
+  color: $light-green-color;
   margin-bottom: 0.5rem;
   text-transform: uppercase;
   text-align: center;
@@ -37,7 +37,7 @@ h2 {
     line-height: 2.125rem;
     family: "Montserrat", sans-serif;
   }
-  color: var(--dark-gray-color);
+  color: $dark-gray-color;
 }
 
 .category-list-container {
@@ -59,7 +59,7 @@ h2 {
   button {
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
-    background-color: var(--disabled-color);
+    background-color: $disabled-color;
     color: var(--dark-gray-color);
     border: none;
     cursor: pointer;
@@ -67,7 +67,7 @@ h2 {
     transition: all 0.3s ease;
 
     &.active {
-      background-color: var(--light-green-color);
+      background-color: $light-green-color;
       color: var(--white);
     }
   }
@@ -115,7 +115,7 @@ h2 {
     align-items: center;
     text-align: center;
     background: rgba(0, 0, 0, 0.7);
-    color: white;
+    color: $white;
     font-weight: bolder;
     font-size: 1.2rem;
     opacity: 0;
@@ -130,7 +130,7 @@ h2 {
 .team {
   padding: 4rem 2rem;
   text-align: center;
-  background-color: var(--white);
+  background-color: $white;
 
   h3 {
     font: {
@@ -140,13 +140,13 @@ h2 {
       family: "Montserrat", sans-serif;
     }
     margin-bottom: 1rem;
-    color: var(--dark-gray-color);
+    color: $dark-gray-color;
   }
 
   p {
     width: 80%;
     margin: 0 auto 3rem;
-    color: var(--dark-gray-color);
+    color: $dark-gray-color;
     font: {
       weight: 400;
       size: 1rem;
@@ -167,7 +167,7 @@ h2 {
     }
 
     h5 {
-      color: var(--dark-gray-color);
+      color: $dark-gray-color;
       margin-bottom: 1rem;
     }
   }
@@ -210,14 +210,14 @@ h2 {
       width: 2rem;
       height: 2rem;
       clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-      background-color: var(--light-green-color);
-      color: var(--white);
+      background-color: $light-green-color;
+      color: $white;
       cursor: pointer;
       transition: all 0.3s ease;
 
       &:hover {
-        background-color: var(--white);
-        color: var(--light-green-color);
+        background-color: $white;
+        color: $light-green-color;
       }
     }
   }
