--- a/landingpage/src/Components/services/services.scss
+++ b/landingpage/src/Components/services/services.scss
@@ -227,13 +227,7 @@
     }
 
     .dropdown-container {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-
       .dropdown {
-        margin-bottom: 20px;
-
         h4 {
           font-size: 18px;
           font-weight: bold;
@@ -242,6 +236,13 @@
           cursor: pointer;
           display: inline-flex;
           align-items: center;
+          transition: color 0.3s ease;
+
+          &:hover,
+          &.active {
+            border-color: $light-green-color;
+            color: $light-green-color;
+          }
 
           span.numbering {
             font-size: 14px;
@@ -259,18 +260,20 @@
 
             &.active {
               border-color: $light-green-color;
-              background-color: $light-green-color;
               color: $white;
             }
+          }
+
+          &:hover span.numbering {
+            border-color: $light-green-color;
+            color: $light-green-color;
           }
         }
 
         p {
-          font-size: 16px;
-          color: $dark-gray-color;
-          line-height: 1.5;
-          margin-bottom: 20px;
           display: none;
+          color: $dark-gray-color;
+          margin-top: 10px;
 
           &.active {
             display: block;
@@ -285,7 +288,7 @@
       margin-top: -3rem;
       background-image: url("../../assets/Forest.jpg");
       width: 76.5%;
-      height: 400px; // Adjust this height as necessary
+      height: 400px;
       background-size: cover;
       background-position: center;
     }
