--- a/landingpage/src/Components/intro/intro.scss
+++ b/landingpage/src/Components/intro/intro.scss
@@ -22,12 +22,88 @@
   text-align: left;
 }
 
+.lp_text {
+  width: 50%;
+  padding: 20px;
+  padding-left: 10rem;
+  box-sizing: border-box;
+  float: left;
+  align-content: left;
+
+  h2 {
+    padding-top: 6.875rem;
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: $dark-gray-color;
+    margin-bottom: 20px;
+    text-align: left;
+  }
+
+  p {
+    font-size: 1.125rem;
+    line-height: 1.5;
+    color: $light-gray-color;
+    margin-bottom: 20px;
+
+    &.lp_italic {
+      font-style: italic;
+    }
+  }
+
+  h4 {
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: $dark-gray-color;
+    margin-bottom: 20px;
+  }
+}
+
+.lp_container {
+  padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  word-wrap: break-word;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  position: relative;
+  background-clip: border-box;
+  border-radius: 0.25rem;
+
+  .girlswing-wrapper {
+    overflow: hidden;
+    height: 500px;
+    width: 500px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+
+  .Girlswing {
+    background-image: url(../../assets/Girlswing.jpg);
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    transition: transform 0.3s ease-out;
+    cursor: pointer;
+    border: none;
+    margin-top: -3rem;
+  }
+
+  .Girlswing:hover {
+    transform: scale(1.1);
+  }
+}
+
 .lp_skill-list-container {
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
   position: relative;
-  width: 100%;
+  width: 90%;
+  margin-left: 6rem;
   padding-right: 15px;
   padding-left: 15px;
   box-sizing: border-box;
@@ -76,83 +152,4 @@
     color: $dark-gray-color;
     margin-bottom: 0;
   }
-}
-
-.lp_container {
-  padding-top: 3rem;
-  display: flex;
-  flex-direction: column;
-  word-wrap: break-word;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-  position: relative;
-  background-clip: border-box;
-  border-radius: 0.25rem;
-
-  .girlswing-wrapper {
-    overflow: hidden;
-    height: 500px;
-    width: 500px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-  }
-
-  .Girlswing {
-    background-image: url(../../assets/Girlswing.jpg);
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-    transition: transform 0.3s ease-out; /* Smooth transition */
-    cursor: pointer;
-    border: none;
-    margin-top: -3rem;
-  }
-
-  .Girlswing:hover {
-    transform: scale(1.1); /* Scale up */
-  }
-}
-.lp_text {
-  width: 50%;
-  padding: 20px;
-  box-sizing: border-box;
-  float: left;
-  align-content: center;
-
-  h2 {
-    padding-top: 6.875rem;
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: $dark-green-color;
-    margin-bottom: 20px;
-  }
-
-  p {
-    font-size: 1.125rem;
-    line-height: 1.5;
-    color: $dark-gray-color;
-    margin-bottom: 20px;
-
-    &.lp_italic {
-      font-style: italic;
-    }
-  }
-
-  h4 {
-    font-size: 1.25rem;
-    font-weight: bold;
-    color: $dark-green-color;
-    margin-bottom: 20px;
-  }
-}
-
-.lp_intro-bottom p {
-  font-size: 1rem;
-  line-height: 1.5;
-  color: $dark-gray-color;
-  margin-bottom: 0;
 }
