--- a/landingpage/src/Components/about/about.scss
+++ b/landingpage/src/Components/about/about.scss
@@ -10,8 +10,7 @@
     width: 50%;
     height: 350px;
     border-radius: 8px;
-    margin-left: 5rem;
-    margin-top: 2rem;
+    margin: 2rem 0 0 5rem;
   }
 
   .content {
@@ -50,6 +49,7 @@
         margin-bottom: 0.5rem;
         padding-left: 1.5rem;
         list-style: none;
+        color: $light-gray-color;
 
         &::before {
           content: "■";
