--- a/landingpage/src/Components/navbar/navbar.scss
+++ b/landingpage/src/Components/navbar/navbar.scss
@@ -15,7 +15,7 @@
   padding: 1rem 2rem;
 
   &.scrolling {
-    background-color: $form-input-bg-color;
+    background-color: $dark-green-color;
     padding: 0.75rem 1.5rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
@@ -56,9 +56,7 @@
 
       a {
         color: $white;
-        font-family: var(--font-family);
-        font-weight: 500;
-        font-size: 1rem;
+        font: 600 0.875rem / 0.875rem "Open Sans", sans-serif;
         text-transform: capitalize;
         cursor: pointer;
         transition: color 0.3s;
